<resources>
    <string name="app_name">BCTest</string>
    <string name="action_settings">Settings</string>
    <string name="chain_home_empty">Now we only have EOS tests</string>
    <string name="no_server_available">No available server</string>
    <string name="available_servers">Available servers:\n%1$s</string>
    <string name="processing">Processing</string>
    <string name="get_info_error">Failed to get requested info.</string>
    <string name="regenerate">Regenerate</string>
    <string name="input_account_name">Input account name</string>
    <string name="eos_account_length_err">Account name illegal, it should be 12 characters and only contains a-z,1-5.</string>
    <string name="input_block_num">Input block No.</string>
    <string name="block_num_error">Could only input positive integer</string>
    <string name="get_abi_account_err">Please input correct account which you want query ABI.</string>
    <string name="copy_to_clipboard">Copy to Clip board</string>
    <string name="content_copyed_to_clipboard">Result had been copied to Clip board.</string>
    <string name="input_contract_name">Input contract name</string>
    <string name="input_table_name">Input table name</string>
    <string name="get_table_row_input_err">Invalid input,all informations should be filled.</string>
    <string name="input_wallet_name">Input wallet name</string>
    <string name="wallet_pswd_notify">Here is password for this wallet,please remember it,in other tests we may use this password to unlock the wallet to signature the transaction.:\n%1$s</string>
    <string name="wallet_create_failed">Wallet create failed.</string>
    <string name="wallet_empty">No wallet now, you need to create a wallet first.</string>
    <string name="wallet_list_info">wallet with "*" is unlocked.</string>
    <string name="list_wallets">List wallets</string>
    <string name="input_pswd_to_unlock_wallet">Input password to unlock this wallet.</string>
    <string name="create_wallet">Create wallet</string>
    <string name="imported_keys">Here are the imported keys:</string>
    <string name="generated_keys">Private Key:%1$s\nPublic Key:%2$s</string>
    <string name="import_key">Import</string>
    <string name="create_key">Create and import keys</string>
    <string name="input_args">Input arguments</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="memo">Memo</string>
    <string name="input_private_for_import">Input the private key you wish to import.</string>
    <string name="account_pay_for_ram">Account pay for the ram.</string>
    <string name="account_receive_ram">Account receive the ram.</string>
    <string name="how_much_ram_to_buy">How much RAM to buy.(in Byte)</string>
    <string name="illegal_ram_input">Illegal ram byte to buy</string>
    <string name="account_sell_ram">Account wish to sell ram</string>
    <string name="bytes_to_sell">How much RAM to sell (by Bytes)</string>
    <string name="bytes_to_sell_kb">How much RAM to sell (by kB)</string>
    <string name="account_pay_for_res">Account pay for cpu/net</string>
    <string name="account_receive_res">Account receive cpu/net</string>
    <string name="eos_for_cpu">How much EOS for CPU (only input integer,ex. "1")</string>
    <string name="eos_for_net">How much EOS for NET (only input integer,ex. "1")</string>
    <string name="illegal_cpu_net">Illegal input of CPU/NET</string>
    <string name="browser_info">Please input the account name which you wish to browse.\nWill use get_abi to query the contracts supplied in this account.</string>
    <string name="empty_input">Some input is empty.</string>
    <string name="get_abi_err">get_abi failed, please retry.\n
    Maybe this account doesn't have contract.</string>
    <string name="remember_wallets">Remember wallet password</string>
    <string name="no_wallet_alert">No wallet created now,some operations need create wallet and import private key.\nYou can click "list wallets" to view current wallets and create a new one.</string>
    <string name="private_key_import_fail">Invalid private key, please check and input carefully.</string>
    <string name="offset">offset</string>
    <string name="pos">pos</string>
    <string name="invalid_pos_or_offset">Invalid pos or offset</string>
    <string name="transaction_id">Transaction id</string>
    <string name="action">Action</string>
    <string name="binargs">Binargs</string>
    <string name="price_info">Get latest trade from %1$s ,amount:%2$s,price:%3$s.</string>
    <string name="price_info_detail">Get latest trade info from %1$s.\n
        price of 24h before:%2$s.\n
        price of now:%3$s. \n
        highest price:%4$s.\n
        lowest price:%5$s.\n
        amount:%6$s.\n
        volumn:%7$s.</string>
    <string name="account_balance_info">Balance of %1$s:%2$f\n
        Details:\n
            liquid eos:%3$f\n
            ram:%4$d Byte\n
            cpu:%5$f\n
            net:%6$f\n
            total eos:%7$f\n
            price:%8$f</string>
    <string name="ram_trade_notice">Will query ram price every x minutes you entered.\n
        If it meets your designated price, will execute it.\n
        Attention:this task is in RAM, so if this app closed, it will not be executed anymore.</string>
    <string name="buy_ram">Buy RAM</string>
    <string name="sell_ram">Sell RAM</string>
    <string name="buy_ram_eos_amount">How many EOS to pay,must be xx.xxxx,ex. "10.0000",or it will fail.</string>
    <string name="buy_ram_price_hint">Price you wish to buy RAM.(/kB)</string>
    <string name="sell_ram_price_hint">Price you wish to sell RAM.(/kB)</string>
    <string name="ram_trade_retry_time_hint">How long time wish to retry(int,/minutes)</string>
    <string name="buy_it">Buy it</string>
    <string name="sell_it">Sell it</string>
    <string name="pending_buy_ram">Pending buy RAM tasks:</string>
    <string name="pending_sell_ram">Pending sell RAM tasks:</string>
    <string name="check_balance">Check balance</string>
    <string name="check_balance_result">Liquid EOS:%1$f\n
        RAM:%2$f kB\n
        CPU:%3$f\n
        NET:%4$f</string>
    <string name="check_time_alert">Need >0, and be integer, will try get ram price every x minutes. </string>
    <string name="buy_task_info">Trying to buy %1$s EOS RAM on price %2$f EOS/kB,will retry every %3$d minutes</string>
    <string name="sell_task_info">Trying to sell %1$f kBytes RAM on price %2$f EOS/kB,will retry every %3$d minutes.</string>
    <string name="get_price_fail_info">Failed to get price from Huobi,If you are running this in China, you need to pass the Great Wall.</string>
</resources>
