<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ram_trade_notice"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#66CCFF"/>
        <!--Check account balance-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_balance"
                android:textSize="@dimen/text_font_big"/>
            <EditText
                android:id="@+id/check_account"
                android:maxLength="12"
                android:layout_width="@dimen/editor_length_short"
                android:layout_height="wrap_content"
                android:hint="@string/input_account_name"/>
            <Button
                android:id="@+id/check_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/ok"/>
            <TextView
                android:id="@+id/check_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#66CCFF"/>
        <!--buy-->
        <LinearLayout
            android:id="@+id/buy_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buy_ram"
                android:textSize="@dimen/text_font_big"/>
            <EditText
                android:id="@+id/buy_payer"
                android:maxLength="12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/account_pay_for_ram"/>
            <EditText
                android:id="@+id/buy_receiver"
                android:maxLength="12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/account_receive_ram"/>
            <EditText
                android:id="@+id/buy_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/buy_ram_eos_amount"/>
            <EditText
                android:id="@+id/buy_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/buy_ram_price_hint"/>
            <EditText
                android:id="@+id/buy_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ram_trade_retry_time_hint"/>
            <Button
                android:id="@+id/buy_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_it"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pending_buy_ram"/>
            <TextView
                android:id="@+id/buy_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/cancel_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                android:enabled="false"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#66CCFF"/>
        <!--sell-->
        <LinearLayout
            android:id="@+id/sell_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sell_ram"
                android:textSize="@dimen/text_font_big"/>
            <EditText
                android:id="@+id/sell_account"
                android:maxLength="12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/account_sell_ram"/>
            <EditText
                android:id="@+id/sell_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/bytes_to_sell_kb"/>
            <EditText
                android:id="@+id/sell_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sell_ram_price_hint"/>
            <EditText
                android:id="@+id/sell_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ram_trade_retry_time_hint"/>
            <Button
                android:id="@+id/sell_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_it"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pending_sell_ram"/>
            <TextView
                android:id="@+id/sell_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/cancel_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

